--- a/modulo 3/exercicios m3/ex023/tabela004.html
+++ b/modulo 3/exercicios m3/ex023/tabela004.html
@@ -28,14 +28,14 @@
         <caption>Filmes Favoritos</caption>
         <thead>
             <tr>
-                <th>Grupo</th>
+                <th scope="col">Grupo</th>
                 <th scope="col">Nomes</th>
-                <th scope="col" colspan="3">Filmes</th>
+                <th scope="colgroup" colspan="3">Filmes</th>
             </tr>
         </thead>
         <tbody>
             <tr>
-                <th rowspan="3" scope="row">Mulheres</th>
+                <th rowspan="3"  scope="rowgroup">Mulheres</th>
                 <td>Ana Maria Santos</td>
                 <td>Alien</td>
                 <td>Rambo</td>
@@ -54,7 +54,7 @@
                 <td>Big Hero</td>
             </tr>
             <tr>
-                <th rowspan="3" scope="row">Homens</th>
+                <th rowspan="3" scope="rowgroup">Homens</th>
                 <td>Bruno Mendonça</td>
                 <td>Intocáveis</td>
                 <td>Amnésia</td>
